<resources>
    <string name="app_name">TreePLE-Android</string>
    <string name="title_activity_maps">Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registerHello">Welcome To TreePLE</string>
    <string name="logo_description">Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Create New Tree</string>
</resources>
